added the brick counter