@@ -40,11 +40,15 @@ public class ModLootTableProvider extends LootTableProvider {
         @Override
         protected void generate() {
             dropSelf(BlockRegistry.SHREDDED_CHEESE_BAG.get());
+            dropSelf(BlockRegistry.BRICK_COUNTER.get());
         }
 
         @Override
         protected Iterable<Block> getKnownBlocks() {
-            return Collections.singletonList(BlockRegistry.SHREDDED_CHEESE_BAG.get());
+            return List.of(
+                    BlockRegistry.SHREDDED_CHEESE_BAG.get(),
+                    BlockRegistry.BRICK_COUNTER.get()
+            );
         }
     }
 }
